Fix h3 spacing on mobile

--- a/frontend/styles/pages/garage.css
+++ b/frontend/styles/pages/garage.css
@@ -30,6 +30,10 @@ p {
     justify-content: center;
 }
 
+.message-container {
+    height: 40vh;
+}
+
 .vehicle-card {
     text-align: center;
     border: none;
@@ -61,4 +65,20 @@ p {
     text-decoration: underline;
     text-decoration-color: #5449BB;
     text-decoration-thickness: 2px;
+}
+
+@media only screen and (min-width: 280px) and (max-width: 1280px) {
+
+    .middle-container {
+        width: 90vw;
+    }
+
+    .message-container {
+        width: 100%;
+        height: 20vh;
+    }
+
+    h3 {
+        font-size: large;
+    }
 }
